--- a/Inventaire/CustomerView.xaml
+++ b/Inventaire/CustomerView.xaml
@@ -7,9 +7,6 @@
         mc:Ignorable="d"
         Title="Gestion de clients" Width="800" Height="500"
         MinHeight="500" MinWidth="640">
-    <Window.CommandBindings>
-        <CommandBinding Command="New" CanExecute="CommonCommandBinding_CanExecute" />
-    </Window.CommandBindings>
     <DockPanel>
         <StackPanel DockPanel.Dock="Top">
             <Menu>
@@ -18,7 +15,7 @@
                     <MenuItem Header="_Sauvegarder"/>
                     <MenuItem Header="_Fermer"/>
                     <Separator/>
-                    <MenuItem Header="_Nouveau" />
+                    <MenuItem Header="_Nouveau" Click="Nouveau_clients" />
                     <Separator/>
                     <MenuItem Header="_Quitter"/>
                 </MenuItem>
@@ -35,7 +32,7 @@
             </Menu>
             <ToolBarTray DockPanel.Dock="Top">
                 <ToolBar>
-                    <Button Command="New" Content="Nouveau" />
+                    <Button Content="Nouveau" Click="Nouveau_clients"/>
                 </ToolBar>
             </ToolBarTray>
         </StackPanel>
@@ -55,7 +52,7 @@
                 </Grid.RowDefinitions>
                 <StackPanel Margin="6" Orientation="Horizontal" x:Name="spHeader">
                     <TextBlock Text="Liste des clients" />
-                    <Button Content="Nouveau" Margin="6 0"  />
+                    <!--<Button Content="Nouveau" Margin="6 0" Click="Nouveau_clients" />-->
                 </StackPanel>
                 <ListView Grid.Row="1" ItemsSource="{Binding Customers}"
                           SelectedItem="{Binding SelectedCustomer}"
