--- a/Inventaire/CustomerView.xaml
+++ b/Inventaire/CustomerView.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="Gestion de clients" Width="800" Height="500"
         MinHeight="500" MinWidth="640">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.New"  Executed="NewCommand_Executed" CanExecute="NewCommand_CanExecute" />
+    </Window.CommandBindings>
     <DockPanel>
         <StackPanel DockPanel.Dock="Top">
             <Menu>
@@ -15,7 +18,7 @@
                     <MenuItem Header="_Sauvegarder"/>
                     <MenuItem Header="_Fermer"/>
                     <Separator/>
-                    <MenuItem Header="_Nouveau" Click="Nouveau_clients" />
+                    <MenuItem Header="_Nouveau"  Command="ApplicationCommands.New" />
                     <Separator/>
                     <MenuItem Header="_Quitter"/>
                 </MenuItem>
@@ -32,7 +35,7 @@
             </Menu>
             <ToolBarTray DockPanel.Dock="Top">
                 <ToolBar>
-                    <Button Content="Nouveau" Click="Nouveau_clients"/>
+                    <Button Content="Nouveau" Command="ApplicationCommands.New"/>
                 </ToolBar>
             </ToolBarTray>
         </StackPanel>
